--- a/templates/estimation/final_price.html.twig
+++ b/templates/estimation/final_price.html.twig
@@ -7,13 +7,13 @@
                 {% if message %}
                 <p class="text-danger">{{ message }}</p>
                 {% else %}
-                <h2 class="text-dark">Ton téléphone a une valeur de :</h2>
-                <h3 class="secondary-button m-3">{{ estimation.estimatedPrice }} Euros</h3>
+                <h2 class="text-dark">Ton téléphone a une valeur de</h2>
+                <h3 class="primary-title">{{ estimation.estimatedPrice }} €</h3>
                 {% endif %}
                 {% if app.user %}
                 <div class="jumbotron">
                     <h4>Pour finaliser la vente de ton téléphone, </h4>
-                    <a class="btn btn-primary" href="{{ path("mode_envoi", {'id': estimation.id  }) }}">Choisis ton mode de dépôt</a>
+                    <a class="primary-button" href="{{ path("mode_envoi", {'id': estimation.id  }) }}">Choisis ton mode de dépôt</a>
                 </div>
                 {% else %}
                 <div class="jumbotron">
