--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -37,7 +37,7 @@
             Numéro de téléphone
         </div>
         <div class="col-5 text-left border-bottom p-2 pl-5">
-            0{{ user.phoneNumber }}
+            {{ user.phoneNumber }}
         </div>
     </div>
     <div class="row align-items-center">
