User can access its own Chronopost

--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                     <div class="col-4">
-                        <a class="primary-button mb-3 " href="">
+                        <a class="primary-button mb-3 " href="{{ path('show_etiquette', {'user': user.id, 'estimation': estimation.id}) }}" target="_blank">
                             Voir l'étiquette Chronopost
                         </a>
                     </div>
