Show profil or administration acess on burger menu, give up button

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,16 +27,17 @@
                             <img src="{{ asset('images/perso-bipbip.png') }}" alt="Téléphone" id="phone-menu"/>
                             <div class="user-infos-menu">
                                 {% if app.user %}
-                                    <a href="{{ path('user_show', { 'id':app.user.id}) }}" class="disconnection">
-                                        <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
+                                    <a href="{{ path('user_show', { 'id':app.user.id}) }}">
+                                        <h3 class="primary-title-menu-color">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
+                                        {% for role in app.user.roles %}
+                                            {% if role == "ROLE_COLLECTOR" or role == "ROLE_ADMIN" %}
+                                                <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="primary-title-menu">Accès à l'administration</a>
+                                            {% else %}
+                                                <p class="primary-title-menu">Mon profil</p>
+                                            {% endif %}
+                                        {% endfor %}
                                     </a>
                                     <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
-
-                                    {% for role in app.user.roles %}
-                                        {% if role == "ROLE_COLLECTOR" or role == "ROLE_ADMIN" %}
-                                            <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="primary-button">Accéder à la plateforme d'administration</a>
-                                        {% endif %}
-                                    {% endfor %}
 
                                 {% else %}
                                     <a href="{{ path('app_login') }}" class="connect"> Se connecter / s'inscrire</a>
