--- a/templates/user/envoi_chronopost.html.twig
+++ b/templates/user/envoi_chronopost.html.twig
@@ -16,7 +16,8 @@
                         si tu souhaites l'imprimer plus tard.
                     </p>
                     <p class="text-center">
-                        <a class="btn btn-info" href="{{ path('api_chronopost_ae', {'id': user.id, 'estimation': estimation, 'status': 2}) }}">
+                        {# statut estimation "2" correspond à une génération d'étiquette Chronopost, sauvée sur le serveur #}
+                        <a class="primary-button" href="{{ path('api_chronopost_ae', {'id': user.id, 'estimation': estimation, 'status': 2}) }}">
                             Générer mon étiquette
                         </a>
                     </p>
@@ -33,7 +34,8 @@
                         sera générée lors de ton passage au bureau de poste.
                     </p>
                     <p class="text-center">
-                        <a class="btn btn-info" href="{{ path('api_chronopost_se', {'id': user.id, 'estimation': estimation, 'status': 2}) }}">
+                        {# statut estimation "4" correspond à un code Chronopost envoyé au client #}
+                        <a class="primary-button" href="{{ path('api_chronopost_se', {'id': user.id, 'estimation': estimation, 'status': 4}) }}">
                             Recevoir mon code
                         </a>
                     </p>
