--- a/templates/faq/_form.html.twig
+++ b/templates/faq/_form.html.twig
@@ -6,5 +6,5 @@
     {{ form_widget(form, {'label': 'Reponses'}) }}
 </div>
     {{ form_widget(form) }}
-    <button class="secondary-button">{{ button_label|default('Enregistrer') }}</button>
+    <button class="primary-button">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
