Display hours on Firefox when admin add a collect

--- a/templates/collects/_form.html.twig
+++ b/templates/collects/_form.html.twig
@@ -6,6 +6,8 @@
         <div class="offset-sm-3 col-sm-6 offset-sm-3">
                 {{ form_row(form.dateCollect) }}
         </div>
+        <div class="text-center">
         <button class="fourth-button">{{ button_label|default('Enregistrer') }}</button>
+        </div>
     {{ form_end(form) }}
 </div>
