--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -65,7 +65,7 @@
 
         <p>Pas encore de compte ?</p>
         <a href="{{ path('app_register') }}" class="registration">Crées-en un !</a>
-        <a href="{{ path('request_resetting') }}" class="registration">Mot de passe oublié? !</a>
+        <a href="{{ path('request_resetting') }}" class="registration">Mot de passe oublié? </a>
     {% endif %}
 </main>
 {% endblock %}
