--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -27,3 +27,16 @@
         margin: 80px auto;
     }
 }
+
+#mdp {
+    margin: 7% 0;
+}
+
+#new-mdp {
+    margin: 7% 0;
+    width: 50%;
+    @media screen and (min-width: 1025px) {
+        margin: auto;
+
+    }
+}
