barre progress move

--- a/templates/bdc/editUser.html.twig
+++ b/templates/bdc/editUser.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {{ form_start(form) }}
     <main class="container">
-        <div class="progress">
+        <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="7" style="width: 42%">
                 3 sur 7
             </div>
