--- a/templates/bdc/pay.html.twig
+++ b/templates/bdc/pay.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{% endblock %}
 {% block body %}
     <main class="container">
-        <div class="progress">
+        <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="6" aria-valuemin="0" aria-valuemax="7" style="width: 85%">
                 6 sur 7
             </div>
