--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 {%  block body %}
 <main class="container">
-    <div class="progress">
+    <div class="progress mt-4">
         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="7" style="width: 71%">
             5 sur 7
         </div>
