--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -11,7 +11,7 @@
     <main class="admin-tables">
         <div class="container">
             {% if app.user.roles[0] == "ROLE_COLLECTOR" %}
-            <div class="progress">
+            <div class="progress mt-4">
                 <div class="progress-bar bg-success" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="7" style="width: 14%">
                     1 sur 7
                 </div>
