--- a/templates/bdc/end.html.twig
+++ b/templates/bdc/end.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Confirmation{% endblock %}
 {% block body %}
     <main class="container">
-        <div class="progress">
+        <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="7" style="width: 100%">
                 7 sur 7
             </div>
