--- a/templates/bdc/takePhoto.html.twig
+++ b/templates/bdc/takePhoto.html.twig
@@ -9,7 +9,7 @@
                 {{ error }}
             </div>
         {% endfor %}
-        <div class="progress">
+        <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="7" style="width: 57%">
                 4 sur 7
             </div>
