--- a/templates/estimations/editEstim.html.twig
+++ b/templates/estimations/editEstim.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <main class="container">
-        <div class="progress">
+        <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="7" style="width: 28%">
                 2 sur 7
             </div>
