--- a/templates/resetting/index.html.twig
+++ b/templates/resetting/index.html.twig
@@ -9,6 +9,11 @@
 
 {% block body %}
     <main>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success text-center">
+                {{ message }}
+            </div>
+        {% endfor %}
         <h1 class="primary-title">Renouvellement du mot de passe</h1>
         <div class="container m-auto col-8 col-sm-6 col-lg-3" id="new-mdp">
             {{form_start(form)}}
