change background and var-colors in _vars

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,7 +1,9 @@
-$primary-color: #159FAD;
-$secondary-color: #60CEC6;
-$third-color : #65AE6E;
-$fourth-color : #007F68;
+$primary-color: #219BAB;
+$secondary-color: #A3BFA8;
+$third-color : #3B9655;
+$fourth-color : #F0BD5F;
+$fifth-color : #DCE5DC;
+$sixth-color : #ECECEC;
 
 $primary-font: 'Avenir Next';
 $secondary-font : 'Century Gothic';
