--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -264,16 +264,16 @@ header{
             align-items: center;
             background-color: white;
             box-shadow: 5px 3px 10px silver;
-            width: 70px;
-            height: 70px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             position: fixed;
-            right: 2vw;
-            top: 2vh;
+            right: 15%;
+            top: 2%;
             z-index: 5;
 
             img {
-                width: 40%;
+                width: 50%;
             }
 
             p {
@@ -292,7 +292,7 @@ header{
                 min-height: 40px;
                 height: 40px;
                 position: absolute;
-                top: 50px;
+                top: 30px;
                 right: 50px;
 
                 img {
