--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,13 +9,13 @@
 
 {% block body %}
     <main class="home">
-       <div class="row pt-3 header">
-           <div class="offset-2 col-6 offset-md-3 col-md-5 offset-lg-4 col-lg-4 offset-xl-3 col-xl-4">
+       <div class="row pt-3 header bg-white">
+           <div class="col-7 offset-md-3 col-md-5 offset-lg-4 col-lg-4 offset-xl-3 col-xl-4">
                <h4><span class="color-font">BipBip rachète ton tél et en fait</span> le 1er mobile recyclé et connecté
                <span class="color-font">aux bons plans de ta région</span></p>
            </div>
-           <div class="col-3 offset-md-1 col-md-2">
-               <img src="{{ asset('images/perso-bipbip.png') }}" alt="BipBip rachète ton tél" class="img-fluid">
+           <div class="col-5 offset-md-1 col-md-2">
+               <img src="{{ asset('images/perso-bipbip-2.png') }}" alt="BipBip rachète ton tél" class="img-fluid">
            </div>
        </div>
 
