Header ok for all screens

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,18 +12,33 @@
     }
 
    .header {
-       .color-font {
-           color : $primary-color;
-           font-weight : bold;
-       }
+       .header-text {
+           font-size: 1rem;
+           font-weight: 600;
+           text-transform: uppercase;
+
+           .color-primary {
+               color: $primary-color;
+           }
+
+           .color-third {
+               color: $third-color;
+           }
+
+           sup {
+               text-transform: none;
+           }
+        }
 
        img {
            margin-top: -30%;
+           max-height: 170px;
+
            @include media-breakpoint-up(md) {
-               margin-top: -40%;
+               margin-top: -20%;
            }
            @include media-breakpoint-up(xl) {
-               margin-top: -90%;
+               margin-top: -10%;
            }
        }
     }
