--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -2,16 +2,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 .home {
-
-    a{
-        text-decoration: none;
-
-        &:hover{
-            text-decoration: none;
-        }
-    }
-
-   .header {
+    .header {
        .header-text {
            font-size: 1rem;
            font-weight: 600;
@@ -28,54 +19,25 @@
            sup {
                text-transform: none;
            }
-        }
+       }
 
        img {
-           margin-top: -30%;
+           margin-top: -35%;
            max-height: 170px;
 
            @include media-breakpoint-up(md) {
-               margin-top: -20%;
+               margin-top: -10%;
            }
            @include media-breakpoint-up(xl) {
                margin-top: -10%;
            }
        }
-    }
+     }
 
     .img-steps {
         width: 70%;
+        max-width: 150px;
         height: auto;
-    }
-
-    .bubble-text {
-        position: relative;
-        width: 210px;
-        height: 3rem;
-        padding: 8px;
-        background: $primary-color;
-        font-family: $secondary-font, sans-serif;
-        color: white;
-        font-size: 1.2rem;
-        font-weight: bold;
-        text-align: center;
-        vertical-align: center;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-    }
-
-    .bubble-text:after {
-        content: '';
-        position: absolute;
-        border-style: solid;
-        border-width: 5px 0 5px 18px;
-        border-color: transparent $primary-color;
-        display: block;
-        width: 0;
-        z-index: 1;
-        right: -12px;
-        top: 31px;
     }
 
     .combien-vaut {
