--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,26 +22,32 @@
         <div class="row justify-content-center p-3">
             <div class="col col-md-4 text-center">
                 <a href="{{ path('new_estimation') }}">
-                <img src="{{ asset('images/btn-vends.png') }}" alt="Vends ton tél" class="img-fluid img-steps">
+                <img src="{{ asset('images/btn-vends.png') }}" alt="Vends ton tél" class="img-fluid img-home">
                 </a>
             </div>
             <div class="col col-md-4 text-center">
                 <a href="{{ path('boutique') }}">
-                <img src="{{ asset('images/btn-achete.png') }}" alt="Achète un tél" class="img-fluid img-steps">
+                <img src="{{ asset('images/btn-achete.png') }}" alt="Achète un tél" class="img-fluid img-home">
                 </a>
             </div>
         </div>
 
-        <h1 class="row justify-content-center primary-title">Le constat !</h1>
-        <div class="row mt-4 align-items-center">
-            <div class="col">
-                <img src="{{ asset('images/qui-sommes-nous.png') }}" alt="Qui sommes-nous" class="img-fluid">
+        <h1 class="primary-title">Le constat !</h1>
+        <div class="row justify-content-center">
+            <div class="col col-sm-3 text-center">
+                <img src="{{ asset('images/constat-1.png') }}"
+                     alt="2 téléphones portables en hibernation par personne"
+                     class="img-fluid img-constat">
             </div>
-            <div class="col">
-                <img src="{{ asset('images/qui-sommes-nous.png') }}" alt="Qui sommes-nous" class="img-fluid">
+            <div class="col col-sm-3 text-center">
+                <img src="{{ asset('images/constat-2.png') }}"
+                     alt="115000 étudiants dans la métropole Lilloise"
+                     class="img-fluid img-constat">
             </div>
-            <div class="col">
-                <img src="{{ asset('images/ta-planete.png') }}" alt="La planète" class="img-fluid">
+            <div class="col col-sm-3 text-center">
+                <img src="{{ asset('images/constat-3.png') }}"
+                     alt="17 incubateurs / accélérateurs de startup dansles Hauts de France"
+                     class="img-fluid img-constat">
             </div>
         </div>
 
