--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -49,15 +49,15 @@ a{
 .primary-title{
     font-family: $primary-font, sans-serif;
     padding:20px;
-    font-size : 1.7rem;
+    font-size : 1.4rem;
     font-stretch: expanded;
     font-weight: 900;
     text-align : center;
     margin : auto;
-    @media screen and (min-width: 768px) {
+    @include media-breakpoint-up(sm) {
         font-size: 1.8rem;
     }
-    @media screen and (min-width: 1025px) {
+    @include media-breakpoint-up(md) {
         font-size : 2.3rem;
     }
 }
